--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="js/index.js" defer></script>
-    <title>haus-marke-index</title>
-  </head>
-  <body>
-    <h1 id="header">MARKE</h1>
-    <div id="websitesMenu">
-      <div id="websites"></div>
-      <div id="hausEnter">
-        <h2 id="hausText">HAUS</h2>
-        <svg
-          id="enterButton"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
-          />
-        </svg>
-      </div>
-    </div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <script src="js/index.js" defer></script>
+        <title>haus-marke-index</title>
+    </head>
+    <body>
+        <div id="websiteImages"></div>
+        <h1 id="header">MARKE</h1>
+        <div id="websitesMenu">
+            <div id="websites"></div>
+            <div id="hausEnter">
+                <h2 id="hausText">HAUS</h2>
+                <svg
+                    id="enterButton"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                >
+                    <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"
+                    />
+                </svg>
+            </div>
+        </div>
+    </body>
 </html>
